// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="Default Button"
  type="button"
  variant="neutral"
/>
`;

exports[`should render as disabled 1`] = `
<Button
  className="button-group-button is-disabled"
  isBlock={false}
  isDisabled={true}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="Disabled"
  type="button"
  variant="neutral"
/>
`;

exports[`should render with icon only 1`] = `
<Button
  className="button-group-button"
  icon={
    <img
      alt="icon"
    />
  }
  isBlock={false}
  isDisabled={false}
  isIconOnly={true}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="Icon Only"
  type="button"
  variant="neutral"
/>
`;

exports[`should render with onBlur 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onBlur"
  type="button"
  variant="neutral"
/>
`;

exports[`should render with onClick 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onClick"
  type="button"
  variant="neutral"
/>
`;

exports[`should render with onFocus 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onFocus"
  type="button"
  variant="neutral"
/>
`;

exports[`should render with onKeyDown 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onKeyDown"
  type="button"
  variant="neutral"
/>
`;

exports[`should render with onKeyUp 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onKeyUp"
  type="button"
  variant="neutral"
/>
`;
